--- a/shape.html
+++ b/shape.html
@@ -7,10 +7,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
     $(document).ready(function(){
-
       $('#makeShape').click(function()  {
         var height = window.innerHeight;
         console.log(height)
+        var text = $('#text').val();
+        console.log(text);
         var width = window.innerWidth;
         var colorR = Math.floor((Math.random() * 256));
         var colorG = Math.floor((Math.random() * 256));
@@ -21,10 +22,13 @@
         var top = Math.random()*(height-objHeight);
 
         var d = document.createElement('div');
-        $(d).text("HelloWorld").css('height',objHeight).css('width',objWidth).css('position','absolute').css('left',left).css('top',top)
-        .css('background',"rgb(" + colorR + "," + colorG + "," + colorB + ")").css('border-radius',Math.random()*100)
+        $(d).css({'height':objHeight,'width':objWidth,'position':'absolute','left':left,'top':top,'background':"rgb(" + colorR + "," + colorG + "," + colorB + ")",
+        'border-radius':Math.random()*100,'text-align': 'center','vertical-align': 'middle','line-height': objHeight});
         $('body').append(d);
         $()
+      });
+      $('#clear').click(function() {
+        $('div').remove();
       });
 
     });
@@ -33,8 +37,8 @@
     </script>
   </head>
   <body>
-
+    <input type="text" placeholder="Enter Shape Text" id="text">
     <button id="makeShape">MakeShape</button>
-
+    <button id="clear">Clear</button>
   </body>
 </html>
