--- a/shape.html
+++ b/shape.html
@@ -20,16 +20,17 @@
         var objWidth = Math.random()*500
         var left = Math.random()*(width-objWidth);
         var top = Math.random()*(height-objHeight);
-
+        var p = document.createElement('p');
+        $(p).html(text).css({'text-align': 'center','vertical-align': 'middle','padding':"50%"});
         var d = document.createElement('div');
         $(d).css({'height':objHeight,'width':objWidth,'position':'absolute','left':left,'top':top,'background':"rgb(" + colorR + "," + colorG + "," + colorB + ")",
-        'border-radius':Math.random()*100,'text-align': 'center','vertical-align': 'middle','line-height': objHeight});
+        'border-radius':Math.random()*100}).append(p);
         $('body').append(d);
-        $()
       });
       $('#clear').click(function() {
         $('div').remove();
       });
+
 
     });
 
@@ -40,5 +41,7 @@
     <input type="text" placeholder="Enter Shape Text" id="text">
     <button id="makeShape">MakeShape</button>
     <button id="clear">Clear</button>
+    <br>
+    <p id="info"></p>
   </body>
 </html>
